# KigCraft

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/album/: router.py
backend/app/audit/: router.py
backend/app/core/: config.py  paths.py
backend/app/db/: models.py  session.py
backend/app/generation/: codex_manifest.py  codex_usage.py  detail_analysis.py  events.py  job_store.py  local_edit.py  modes.py  provider.py  queue.py  router.py  schemas.py  usage.py  worker.py
backend/app/images/: watermark.py
backend/app/prompts/: router.py  safety.py
backend/app/references/: router.py
backend/tests/: conftest.py  test_codex_bridge_provider.py  test_codex_bridge_service.py  test_codex_provider.py  test_detail_analysis.py  test_generation_jobs.py  test_generation_local_revision.py  test_generation_mock.py  test_health.py  test_local_edit.py  test_prompt_chips.py  test_prompt_safety.py  test_quota_audit.py  test_references.py  test_token_usage.py  test_watermark.py
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: workflow.spec.ts
frontend/: .dockerignore  DESIGN.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  server.mjs  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx  nginxConfig.test.ts  (+1 more)
scripts/: deploy-ssh.ps1  quantize_anime_hrnet_int8.py
tools/: codex_bridge.py  local_smoke_server.py  smoke_app.html  start_codex_bridge.ps1  start_smoke_server.ps1  watermark_image.py
(+71 files in other folders)
