[project]
name = "kig-preview-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic-settings==2.10.1",
  "sqlalchemy[asyncio]==2.0.41",
  "asyncpg==0.30.0",
  "alembic==1.16.4",
  "redis==6.2.0",
  "boto3==1.39.3",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "pyjwt==2.10.1",
  "pillow==11.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

